# slangpy-prb

./: .gitignore  main.py  pyproject.toml
shaders/: accumulate.slang  adam.slang  backpropagate_replay.slang  bsdf.slang  environment.slang  example.slang  gradient_descent.slang  l1_loss.slang  l2_adjoint.slang  l2_loss.slang  matrix_camera.slang  normalize.slang  path_trace.slang  perspective_camera.slang  postprocess.slang  random.slang  raytracing_example.slang  scene.slang  tonemap.slang  triangle.slang  util.slang
shaders/bsdf/: lambertian.slang  microfacet.slang  microfacet_conductor.slang  microfacet_dielectric.slang  microfracet_conductor.slang  specular_conductor.slang  specular_dielectric.slang
shaders/postprocess/: exposure.slang  gamma.slang  srgb.slang  tonemap.slang
shaders/util/: complex.slang  microfacet.slang  random.slang  scattering.slang
src/slangpy_prb/: __init__.py  __main__.py  camera.py  code_gen.py  gradient_descent.py  loss.py  material.py  mesh.py  optimizer.py  pathtracer.py  postprocess.py  replay_backpropagater.py  scene.py  stage.py  stage_ids.py  texture.py  tonemapper.py
src/slangpy_volume_rendering/: __init__.py  __main__.py  camera.py  material.py  mesh.py  scene.py  stage.py  transform.py
