[project]
name = "slangpy-prb"
version = "0.1.0"
description = "A slangpy implementation of path replay backpropagation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.3",
    "matplotlib>=3.10.8",
    "pygltflib>=1.16.5",
    "ruff>=0.14.14",
    "slangpy>=0.40.1",
    "tqdm>=4.67.3",
]

[project.scripts]
slangpy-prb = "slangpy_prb.__main__:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
